--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "description": "Proof of concept for checkout system",
     "require-dev": {
         "phpunit/phpunit": "^10.0",
-        "mockery/mockery": "^1.6"
+        "mockery/mockery": "^1.6",
+        "friendsofphp/php-cs-fixer": "^3.60",
+        "phpstan/phpstan": "^1.11"
     },
     "autoload": {
         "psr-4": {
@@ -17,6 +19,15 @@
     "scripts": {
         "run-tests": [
             "./vendor/bin/phpunit"
+        ],
+        "lint": [
+            "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php --verbose --dry-run --using-cache=no --path-mode=intersection --diff"
+        ],
+        "lint-fix": [
+            "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php  --verbose --using-cache=no"
+        ],
+        "phpstan-analyse": [
+            "./vendor/bin/phpstan analyse --memory-limit=2G"
         ]
     }
 }
